--- a/src/EncCnvtrs/packages.config
+++ b/src/EncCnvtrs/packages.config
@@ -2,5 +2,9 @@
 <packages>
   <package id="Geckofx45" version="45.0.34" targetFramework="net472" />
   <package id="Geckofx45.64" version="45.0.34" targetFramework="net472" />
+  <package id="Geckofx45.64.Linux" version="45.0.21.0" targetFramework="net45" />
+  <package id="Geckofx45.32.Linux" version="45.0.21.0" targetFramework="net45" />
   <package id="Microsoft.Web.WebView2" version="1.0.902.49" targetFramework="net472" />
+  <package id="NUnit" version="3.13.2" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="4.0.0" targetFramework="net472" />
 </packages>
