--- a/src/IcuEC/IcuEC 2010.csproj
+++ b/src/IcuEC/IcuEC 2010.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IcuEC</RootNamespace>
     <AssemblyName>IcuEC</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -40,6 +40,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
@@ -53,6 +54,7 @@
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
@@ -64,7 +66,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
@@ -77,8 +79,33 @@
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>7.3</LangVersion>
     <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>..\..\output\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <RegisterForComInterop>false</RegisterForComInterop>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <PlatformTarget>x86</PlatformTarget>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>..\..\output\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
@@ -98,11 +125,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IcuBreakIteratorEncConverter.cs" />
-    <Compile Include="IcuBreakIteratorAutoConfigDialog.cs">
+    <Compile Include="IcuBreakIteratorEncConverter.cs" Condition="'$(OS)'=='Windows_NT'"/>
+    <Compile Include="IcuBreakIteratorAutoConfigDialog.cs" Condition="'$(OS)'=='Windows_NT'">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="IcuBreakIteratorConfig.cs" />
+    <Compile Include="IcuBreakIteratorConfig.cs" Condition="'$(OS)'=='Windows_NT'"/>
     <Compile Include="IcuConvAutoConfigDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,7 +164,7 @@
       <Name>EncCnvtrs 2010</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\icu4net\ICU4NET\ICU4NET.vcxproj">
+    <ProjectReference Include="..\icu4net\ICU4NET\ICU4NET.vcxproj" Condition="'$(OS)'=='Windows_NT'">
       <Project>{2fadfe38-0429-489f-b910-8a5ec9ab5717}</Project>
       <Name>ICU4NET</Name>
     </ProjectReference>
@@ -190,7 +217,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>
+    <PostBuildEvent Condition="'$(OS)'=='Windows_NT'">
       if $(Platform) == x64 (
       copy $(SolutionDir)DistFiles\windows\x64\icu\bin\icuuc68.dll $(SolutionDir)output\x64\$(ConfigurationName)
       copy $(SolutionDir)DistFiles\windows\x64\icu\bin\icuin68.dll $(SolutionDir)output\x64\$(ConfigurationName)
